[package]
name = "pword"
version = "0.1.0"
edition = "2024"

description = "A fast CLI password generator written in Rust"
license = "MIT"
repository = "https://github.com/CapThunder19/password-generator-rust"
readme = "README.md"

keywords = ["cli", "password", "generator"]
categories = ["command-line-utilities"]

authors = ["CapThunder19"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.10"